2014-07-19  Mark Rowe  <mrowe@apple.com>

        <https://webkit.org/b/135085> Ensure that make_names.pl generates the same result when run multiple times.

        Perl 5.18 introduced hash randomization. This results in the iteration order of hashes being different
        from one run to the next. To ensure identical output we can iterate over the hash keys in sorted order.

        Reviewed by Alexey Proskuryakov.

        * bindings/scripts/StaticString.pm:
        (GenerateStrings):
        (GenerateStringAsserts):
        * dom/make_names.pl:

2014-07-19  Zan Dobersek  <zdobersek@igalia.com>

        Document::unregisterNodeListforInvalidation() and Document::unregisterCollection() have incorrect assertions
        https://bugs.webkit.org/show_bug.cgi?id=134869

        Reviewed by Darin Adler.

        Both methods should assert that the relevant HashMap is either empty if invalidation originates
        from Document::invalidateNodeListAndCollectionCaches() or acutally contains the element that is
        being invalidated. In the first case the HashMap is empty because its entries were moved out in
        the Document::invalidateNodeListAndCollectionCaches().

        This was exposed by r170995 (later rolled out in r170999) which introduced move constructor and
        move assignment operators for HashTable. The assertions in the titular methods won't be passing
        until r170995 relands.

        * dom/Document.cpp:
        (WebCore::Document::unregisterNodeListForInvalidation):

2014-07-18  Eric Carlson  <eric.carlson@apple.com>

        [iOS] ignore requests to set volume
        https://bugs.webkit.org/show_bug.cgi?id=135081

        Reviewed by Jer Noble.

        * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
        (WebCore::MediaPlayerPrivateAVFoundationObjC::setVolume): Do nothing on iOS.

2014-07-18  Andy Estes  <aestes@apple.com>
