@@ -1,3 +1,14 @@
+2014-07-20  Eric Carlson  <eric.carlson@apple.com>
+
+        [iOS] ignore requests to set volume
+        https://bugs.webkit.org/show_bug.cgi?id=135081
+
+        Applied post-review comments from Darin Adler.
+
+        * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
+        (WebCore::MediaPlayerPrivateAVFoundationObjC::setVolume): Don't include unreachable
+            code on iOS.
+
 2014-07-19  Mark Rowe  <mrowe@apple.com>
 
         <https://webkit.org/b/135085> Ensure that make_names.pl generates the same result when run multiple times.
